dataPerKill and requiredData for the extra tier are set via config